Acocunt Model & DB Migrations.

--- a/BevAPI/appsettings.json
+++ b/BevAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=rudorwedu.co.zw;Database=RudoRweduDevDB;user id=sa;password=%$Admin123",
+    "DefaultConnection": "Server=172.105.187.90;Database=BevDB;user id=sa;password=%$Admin123",
     "DevConnection": "Server=AFROPAVILION;Database=RudoRweduDB;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "JwtService": {
